@@ -138,6 +138,7 @@ BEGIN_EVENT_TABLE(FrameMain, wxFrame)
 	EVT_MENU(Menu_View_Zoom_100, FrameMain::OnSetZoom100)
 	EVT_MENU(Menu_View_Zoom_200, FrameMain::OnSetZoom200)
 	EVT_COMBOBOX(Toolbar_Zoom_Dropdown, FrameMain::OnSetZoom)
+	EVT_MENU(Video_Play, FrameMain::OnVideoPlay)
 	EVT_MENU(Menu_Video_Zoom_In, FrameMain::OnZoomIn)
 	EVT_MENU(Menu_Video_Zoom_Out, FrameMain::OnZoomOut)
 	EVT_MENU(Menu_Video_AR_Default, FrameMain::OnSetARDefault)
